Saved:Add Dependency, Startup services and ConnectionString

--- a/Newbie.Services/Newbie.Services.csproj
+++ b/Newbie.Services/Newbie.Services.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="5.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Newbie.Repositories\Newbie.Repositories.csproj" />
+  </ItemGroup>
+
 </Project>
